--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -1,11 +1,10 @@
 .tabs {
   margin-top: 40px;
   background-color: blue;
-  height: 100vh;
+  // height: 100vh;
   width: 80vw;
 }
 
-/* Style the tab */
 .tab {
   overflow: hidden;
   border: 0;
@@ -44,7 +43,6 @@
   background-color: #ccc;
 }
 
-/* Style the tab content */
 .tabcontent {
   display: none;
   padding: 6px 12px;
@@ -55,12 +53,11 @@
 .city {
   width: 100vw;
   // background-color: yellow;
-  padding-top: 30px;
   display: flex;
-  // padding-top: 60px;
   position: relative;
   overflow: hidden;
-  padding: 60px 10vw 60px 10vw;
+  padding: 60px 10vw 160px 10vw;
+  z-index: 3;
 
   & h4 {
     color: #0E1B26;
@@ -90,6 +87,12 @@
     margin: 30px 0;
   }
 
+  @include for-large-devices-down {
+    & img {
+      right: -260px;
+    }
+  }
+
   @include for-medium-devices-down {
     flex-direction: column-reverse;
 
@@ -104,7 +107,7 @@
   }
 
   @include for-small-devices-down {
-    flex-direction: column-reverse;
+    padding: 60px 10vw 20px 10vw;
 
     & img {
       position: relative;
@@ -143,6 +146,10 @@
   font-size: 18px;
   font-weight: 300;
   color: #0E1B26;
+
+  @include for-large-devices-up {
+    display: none;
+  }
 
   @include for-xxlarge-devices-down {
     display: none;
@@ -193,3 +200,24 @@
 .features-dropdown:hover .features-dropdown-options {
   display: block;
 }
+
+.tabs-area {
+  position: relative;
+  overflow:hidden;
+
+  & img:nth-child(1) {
+    position: absolute;
+      right: -600px;
+      top: -200px;
+    width: 1100px;
+    height: auto;
+    transform: rotate(-1deg);
+  }
+
+  @include for-medium-devices-down {
+    & img:nth-child(1) {
+      display: none;
+    }
+  }
+}
+
