--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -282,7 +282,7 @@
   grid-column-gap: 50px;
   position: relative;
   // background: linear-gradient(#FAFBFC, white);
-  background-color: white;
+  // background-color: white;
   height: 100%;
 
   &_svg {
@@ -342,39 +342,39 @@
   background: linear-gradient(#FAFBFC, white);
   position: relative;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  // justify-content: center;
+  align-items: center;
 
   &_svg {
     background: linear-gradient(#FAFBFC, white);
     width: 100vw;
-    height: 500vh;
+    height: 430vh;
     position: absolute;
       top: -1000px;
+  }
+
+  @include for-medium-devices-down {
+    &_svg {
+      height: 550vh;
+    }
   }
 }
 
 .third-section-features {
   padding-top: 300px;
   position: relative;
-  z-index: 10;
+  // z-index: 10;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  // justify-content: center;
   width: 100%;
 
   &_icon {
     width: 100px;
     height: auto;
   }
-
-  // &_pill {
-  //   width: 500px;
-  //   height: auto;
-  //   position: absolute;
-  //   right: 0;
-  //   bottom: 0;
-  // }
 
   & h2 {
     color: #0D1B26;
@@ -390,3 +390,262 @@
   }
 }
 
+.third-section-video {
+  width: 100%;
+  height: 700px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: relative;
+  padding-top: 100px;
+  // overflow: hidden;
+
+  & img:nth-child(1) {
+    position: absolute;
+      top: -550px;
+      left: -250px;
+    z-index: 1;
+    opacity: 0.8;
+  }
+
+  & img:nth-child(2) {
+    height: auto;
+    width: 500px;
+    position: absolute;
+      bottom: -250px;
+      right: 0px;
+    z-index: 1;
+  }
+
+  & img:nth-child(3) {
+    height: auto;
+    width: 200px;
+    position: absolute;
+      bottom: -250px;
+      left: 0;
+    z-index: 1;
+  }
+
+  @include for-medium-devices-down {
+    justify-content: center;
+    padding: 0;
+
+    & img:nth-child(1) {
+      display: none;
+    }
+
+    & img:nth-child(2) {
+      display: none;
+    }
+
+    & img:nth-child(3) {
+      bottom: 0;
+      top: -150px;
+    }
+  }
+
+  @include for-small-devices-down {
+    justify-content: center;
+
+    & img:nth-child(3) {
+      width: 100px;
+    }
+  }
+}
+
+.third-section-media {
+  height: 100%;
+  width: 80vw;
+  border-radius: 0 8px 8px 0;
+  background-image: url('https://images.unsplash.com/photo-1562887009-92ca32b341c6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80');
+  background-size: cover;
+  box-shadow: 0px 8px 10px rgba(149, 156, 169, 0.20), -1px -1px 10px rgba(156, 173, 198, 0.20);
+  z-index: 10;
+
+  @include for-medium-devices-down {
+    height: 50vh;
+    width: 85vw;
+  }
+}
+
+.third-video-text {
+  width: 100%;
+  text-align: center;
+  padding-top: 100px;
+  z-index:10;
+
+  & h3 {
+    color: #0E1B26;
+
+    & span {
+      font-weight: 700;
+      color: #E58C47;
+    }
+  }
+
+  & p {
+    color: #737A88;
+  }
+
+  @include for-large-devices-up {
+    display: none;
+  }
+}
+
+// END OF THIRD SECTION
+
+.fourth-section {
+  overflow: visible;
+  width: 100vw;
+  // height: 200vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  padding-top: 400px;
+
+  &_svg {
+    width: 100vw;
+    // height: 420vh;
+    position: absolute;
+      top: -800px;
+    z-index: 0;
+    opacity: 0.8;
+  }
+
+  @include for-medium-devices-down {
+    padding-top: 100px;
+  }
+
+}
+
+.fourth-section-features {
+  z-index: 2;
+  width: 100vw;
+  // height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 10vw;
+  // background-color: blue;
+
+  @include for-large-devices-down {
+    padding: 0 5vw;
+  }
+
+  @include for-medium-devices-down {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    // height: 100vh;
+  }
+
+  @include for-small-devices-down {
+    // height: 140vh;
+  }
+}
+
+.fourth-section-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 400px;
+
+  & img {
+    width: 100px;
+    height: auto;
+  }
+
+  & h2 {
+    color: #0E1B26;
+    padding: 30px 0;
+  }
+
+  & p {
+    color: #7D8390;
+    line-height: 35px;
+    font-weight: 300;
+    font-size: 16px;
+    padding-bottom: 40px;
+  }
+
+  @include for-medium-devices-down {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 100px;
+  }
+
+  @include for-small-devices-down {
+    width: 80vw;
+  }
+}
+
+
+.fourth-section-grid {
+  // background-color: blue;
+  width: 380px;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
+  overflow: visible;
+
+  & img {
+    width: 100%;
+    height: 100%;
+    box-shadow: 0px 8px 10px rgba(149, 156, 169, 0.20), -1px -1px 10px rgba(156, 173, 198, 0.20);
+    object-fit: cover;
+    border-radius: 8px;
+    transition: 0.3s;
+
+    &:hover {
+      box-shadow: 0px 8px 5px rgba(149, 156, 169, 0.25), -1px -1px 10px rgba(156, 173, 198, 0.30);
+    }
+  }
+
+  @include for-large-devices-down {
+    width: 480px;
+    // grid-column-gap: 0px;
+    // grid-row-gap: 0px;
+
+    & img {
+      width: 80%;
+      height: 80%;
+    }
+  }
+
+  @include for-medium-devices-down {
+    width: 50vw;
+    // height: 100%;
+    grid-column-gap: 60px;
+    grid-row-gap: 40px;
+
+    & img {
+      width: 100%;
+      height: 150px;
+    }
+  }
+
+  @include for-small-devices-down {
+    width: 50vw;
+    // height: 100%;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 40px;
+    padding-bottom: 50px;
+
+    & img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+    }
+  }
+
+  @include for-phone-only {
+    width: 90vw;
+    grid-row-gap: 40px;
+  }
+
+}
