--- a/app/views/pages/inks_and_consumables.html.erb
+++ b/app/views/pages/inks_and_consumables.html.erb
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="inks-section">
         <div class="inks-first-section-left">
-          <h1 class="about-first-section-text">Large Ink Cartridge Up to 15 million characters</h1>
+          <h1 class="about-first-section-text"><%= t("inks_and_consumables.first_section_text") %></h1>
         </div>
         <div class="inks-first-section-right d-flex justify-content-center">
           <%= cl_image_tag("inks_and_cons_tyoqgi.png", :quality=>"auto", class: "inks-graphic about-graphic-two") %>
@@ -19,16 +19,16 @@
         <div class="inks-first-section-left">
           <div class="inks-card" style="margin: 0 0 0 auto">
             <%= image_tag 'inks-icon-1.png', class: 'about-icon' %>
-            <p class="inks-card-header">Production friendly inks</p>
-            <p class="paragraph-text inks-card-text">For applications in the food, beverage, cosmetics, household goods, industrial and extrusion markets, we have high quality controlled inks that are virtually odourless and are not M.E.K based. We also offer coloured inks.</p>
+            <p class="inks-card-header"><%= t("inks_and_consumables.first_card_title") %></p>
+            <p class="paragraph-text inks-card-text"><%= t("inks_and_consumables.first_card_text") %></p>
           </div>
         </div>
         <div class="inks-first-section-right">
           <%= image_tag 'about-dots.png', class: 'inks-dots' %>
           <div class="inks-card" style="margin: 0 auto 0 0">
             <%= image_tag 'inks-icon-2.png', class: 'about-icon' %>
-            <p class="inks-card-header">Sealed ink cartridge</p>
-            <p class="paragraph-text inks-card-text">An integral and replaceable ink cartridge maintains a clean ink system free of contamination. Our inks have a excellent adhesion and contrast on a wide range of porous and non-porous materials such as carton, metal, glass, paper, wood, and many plastics. Our inks offers outstanding performance under most common application conditions.</p>
+            <p class="inks-card-header"><%= t("inks_and_consumables.second_card_title") %></p>
+            <p class="paragraph-text inks-card-text"><%= t("inks_and_consumables.second_card_text") %></p>
           </div>
         </div>
       </div>
@@ -43,7 +43,7 @@
         </div>
         <div class="inks-first-section-right">
           <%= image_tag 'inks-icon-3.png', class: 'about-icon' %>
-          <h3 class="inks-fifth-section-text">We now offer a High Adhesion Ink specially designed for PVC extrusion application. Get unprecedented print quality on PVC pipes!</h3>
+          <h3 class="inks-fifth-section-text"><%= t("inks_and_consumables.third_section_text") %></h3>
         </div>
       </div>
     </div>
