--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -356,9 +356,17 @@
 
   @include for-medium-devices-down {
     &_svg {
-      height: 550vh;
+      height: 250vh;
     }
   }
+
+  // @include for-small-devices-down {
+  //   &_svg {
+  //     height: 250vh;
+  //     background-color: blue;
+  //   }
+  // }
+
 }
 
 .third-section-features {
@@ -505,12 +513,12 @@
   padding-top: 400px;
 
   &_svg {
+    // background-color: black;
     width: 100vw;
-    // height: 420vh;
     position: absolute;
       top: -800px;
     z-index: 0;
-    opacity: 0.8;
+    // opacity: 0.8;
   }
 
   @include for-medium-devices-down {
@@ -526,11 +534,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 10vw;
-  // background-color: blue;
+  padding: 0 10vw 100px 10vw;
+  // background-color: #F4F6F8;
 
   @include for-large-devices-down {
-    padding: 0 5vw;
+    padding: 0 5vw 100px 5vw;
   }
 
   @include for-medium-devices-down {
@@ -585,8 +593,7 @@
 
 .fourth-section-grid {
   // background-color: blue;
-  width: 380px;
-  height: 100%;
+  // width: 500px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 30px;
@@ -594,8 +601,8 @@
   overflow: visible;
 
   & img {
-    width: 100%;
-    height: 100%;
+    width: 150px;
+    height: 200px;
     box-shadow: 0px 8px 10px rgba(149, 156, 169, 0.20), -1px -1px 10px rgba(156, 173, 198, 0.20);
     object-fit: cover;
     border-radius: 8px;
@@ -608,12 +615,12 @@
 
   @include for-large-devices-down {
     width: 480px;
-    // grid-column-gap: 0px;
-    // grid-row-gap: 0px;
+    grid-column-gap: 0px;
+    grid-row-gap: 30px;
 
     & img {
-      width: 80%;
-      height: 80%;
+      width: 120px;
+      height: 150px;
     }
   }
 
