--- a/app/views/pages/distributor.html.erb
+++ b/app/views/pages/distributor.html.erb
@@ -16,7 +16,7 @@
     </div>
   </div>
   <div class="distributor-second-section-wrapper">
-    <div class="container">
+    <div class="container-countries">
       <div class="distributor-second-section">
         <h3 class=""><%= t("distributor.second_section_title") %>:</h3>
         <div class="distributor-countries-container">
@@ -30,7 +30,7 @@
     <%= cl_image_tag("distributor-slant_hgpm00.png", :quality=>"auto", class: "distributor-slant") %>
     <div class="container">
       <%= image_tag 'about-dots.png', class: 'distributor-dots-two' %>
-      <div class="distributor-section">
+      <div class="distributor-section distributor-contact">
         <div class="distributor-contact-us-form">
           <%= simple_form_for :send_email, url: send_email_path, method: :get do |f| %>
             <div class="contact-form-name">
@@ -51,6 +51,30 @@
           <p class="paragraph-text"><%= t("distributor.third_section_text") %></p>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="distributor-third-section-mobile">
+    <%= cl_image_tag("distributor-mobile_uhqrlt.png", :quality=>"auto", class: "distributor-slant-mobile") %>
+    <%= image_tag 'distributor-icon.png', class: 'distributor-icon-mobile' %>
+  </div>
+  <div class="distributor-third-section-mobile-two">
+    <div class="distributor-interested">
+      <h3><%= t("distributor.third_section_title") %></h3>
+      <p class="paragraph-text"><%= t("distributor.third_section_text") %></p>
+    </div>
+    <div class="distributor-contact-us-form">
+      <%= simple_form_for :send_email, url: send_email_path, method: :get do |f| %>
+        <div class="contact-form-name">
+          <div class="row">
+            <div class="col-12">
+              <%= f.input :first_name, label: false, placeholder:'first name', input_html: { class: "contact-first-name" } %>
+            </div>
+          </div>
+        </div>
+          <%= f.input :email, label: false, placeholder:'email' %>
+        <%= f.input :message, as: :text, label: false, placeholder:'type your message here', input_html: { class: "contact-message" } %>
+        <%= f.button :button, 'Submit', type: :submit,  class: "contact-form-button" %>
+      <% end %>
     </div>
   </div>
 </div>
