finished contact page might need to tweak the form with formspree for it actually to work

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -49,7 +49,7 @@
       <% end %>
     </div>
     <div class="navbar-item">
-      <%= link_to t("navbar.contact"), root_path %>
+      <%= link_to t("navbar.contact"), contact_path %>
     </div>
     <div class="navbar-item">
       <a href="#" role="button" id="productsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
